# Smart-RC-Car

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  compile.sh  compileAndMake.sh  compileJoystick.sh  compileNode.sh  disableTests.sh  enableTests.sh  gitignore  main  package-lock.json
lib-multiarch/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  utils.h
src/Joystick/: CMakeLists.txt  JoySticks.cpp  Joysticks.h
src/Led/: CMakeLists.txt  Led.cpp  Led.h
src/Network/: CMakeLists.txt  network.cpp  network.h
src/Rover/: rover.h
src/accelerometer/: CMakeLists.txt  acc  accelerometer.cpp  accelerometer.h
src/camera/: CMakeLists.txt  DisplayImage.cpp  DisplayImage.h
src/camera/opencv2/: cvconfig.h
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/direction/: direction.h
src/distance_sensor/: CMakeLists.txt  adafruit_tof.cpp  adafruit_tof.h  distance_sensor.h  sharp  sharpIR_ds.cpp  sharpIR_ds.h
src/gyroscope/: CMakeLists.txt  accelerometer.cpp  accelerometer.h  gy  gyro.cpp  gyro.h  main
src/joystick/: CMakeLists.txt  Makefile  joystick.cpp  joystick.h  js  js.cpp  network_js.cpp  network_js.h
src/led/: CMakeLists.txt  led.cpp  led.h
src/magnetometer/: CMakeLists.txt  magnetometer.cpp  magnetometer.h
src/motors/: CMakeLists.txt  motors.cpp  motors.h
src/network/: CMakeLists.txt  network.cpp  network.h  networkControls.cpp  networkControls.h
src/public/project/: CMakeCache.txt  Makefile  cmake_install.cmake
src/public/project/accelerometer/: Makefile  cmake_install.cmake
src/public/project/camera/: Makefile  cmake_install.cmake
src/public/project/common/: Makefile  cmake_install.cmake
src/public/project/distance_sensor/: Makefile  cmake_install.cmake
src/public/project/gyroscope/: Makefile  cmake_install.cmake
src/public/project/joystick/: Makefile  cmake_install.cmake
src/public/project/led/: Makefile  cmake_install.cmake
src/public/project/motors/: Makefile  cmake_install.cmake
src/public/project/network/: Makefile  cmake_install.cmake
src/public/project/rover/: Makefile  cmake_install.cmake
src/public/project/sensor_fusion/: Makefile  cmake_install.cmake
src/rover/: CMakeLists.txt  rover.cpp  rover.h
src/sensor_fusion/: CMakeLists.txt  orientation.cpp  orientation.h
src/wireless/: CMakeLists.txt  wireless.cpp  wireless.h
tests/: CMakeLists.txt  camera_test.cpp  joystick_test.cpp  magnetometer_test.cpp  network_controls_test.cpp  network_test.cpp  sharp_sensor_test.cpp  simple_test.cc  simple_test.cpp  tof_sensor_test.cpp  wifi_test.cpp
toolchain/: toolchain-arm-linux-gnueabihf.cmake
website/: Makefile  README.md  package-lock.json  package.json  tsconfig.json
website/html/: index.html
website/run-scripts/: startNode.sh
website/src/: app.ts  httpServer.ts  simpleUDPclient.ts  simpleUDPserver.ts  udpServer.ts  utils.ts
website/src/public/: 404.html  index.html
website/src/public/scripts/: client_model.ts  client_ui.ts
website/src/public/stylesheets/: style.css
