add_subdirectory(common)
add_subdirectory(joystick)
add_subdirectory(led)
add_subdirectory(network)
add_subdirectory(rover)
add_subdirectory(distance_sensor)
add_subdirectory(motors)
add_subdirectory(accelerometer)
add_subdirectory(gyroscope)
#add_subdirectory(sensor_fusion)
add_subdirectory(wireless)
add_subdirectory(magnetometer)
add_subdirectory(camera)
